[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["williamfoschiera <william.foschiera@buser.com.br>"]
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

